# shop-lab

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
src/: app.py
src/api/: urls.py
src/api/common/: urls.py
src/api/common/auth/: urls.py
src/api/common/health/: urls.py  views.py
src/api/v1/: urls.py
src/api/v1/orders/: serializer.py  urls.py  views.py
src/api/v1/products/: urls.py  views.py
src/api/v1/users/: serializers.py  urls.py  views.py
src/apps/orders/: admin.py  models.py
src/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_product.py
src/apps/products/: models.py
src/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_image.py
src/apps/users/: admin.py  models.py
src/apps/users/migrations/: 0001_initial.py
src/core/: settings.py  urls.py
src/layouts/: base.py  catalog.py  login.py  order.py  product.py
src/mocks/: products.py
src/models/: order.py  product.py  user.py
src/services/: api.py
src/utils/: validatiors.py
